tests/ui/unsupported_item.stderr
error: distributed element must be either static or function item
 --> tests/ui/unsupported_item.rs:7:1
  |
7 | extern crate std as _std;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
